fixtures/fmt/bad/header_too_late.sans
# comment one
# comment two
let x = 1
let y = 2
datasource raw = csv("raw.csv")
# sans 0.1
